[package]
edition = "2021"
name = "leak_alert_service"
version = "0.1.0"

[dependencies]
anyhow = "1"
rumqttc = "0.24"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tokio-serial = "5"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"]}
